--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sales Data - Initial</title>
+  <link rel="stylesheet" href="./stylesheets/meyersreset.css">
+
   <!-- Google Font - Righteous for heading tags -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
@@ -17,7 +19,7 @@
     <a href="./index.html">Home</a>
     <a href="./sale.html">Sales Data</a>
   </nav>
-  <img src="salmon.png">
+  <img src="./assets/salmon.png">
   <div id="root" class="content"></div>
   <script src="./app.js"></script>
 </body>
