trying to get my Lab to more closely resemble what Dee has so we can actually work on lab07.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./stylesheets/styles.css" />
 </head>
+
+
 <body>
   <header>
-    <h1>Salmon Cookies</h1>
+    <h1> Welcome to Pat's Salmon Cookies</h1>
   </header>
   <nav>
     <a href="./index.html">Home</a>
@@ -23,5 +25,8 @@
   <div id="root" class="content"></div>
   <script src="./app.js"></script>
 </body>
+
+
+
 <footer>&copy 2023 Pat's Salmon Cookies</footer>
 </html>
