--- a/sale.html
+++ b/sale.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="./stylesheets/styles.css" />
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Sales Data - Initial</title>
+
 </head>
 <body>
+  <header>
+    <h1>Welcome to Pat's Salmon Cookies</h1>
+  </header>
+  <nav>
+    <a href="./index.html">Home</a>
+    <a href="./sale.html">Sales Data</a>
+  </nav>
   <h1>Sales Data - Initial</h1>
   <div id="root" class="content"></div>
   <script src="./app.js"></script>
