finally got the sales data to show on sales page.

--- a/sale.html
+++ b/sale.html
@@ -12,12 +12,21 @@
   <header>
     <h1>Welcome to Pat's Salmon Cookies</h1>
   </header>
+
   <nav>
     <a href="./index.html">Home</a>
     <a href="./sale.html">Sales Data</a>
   </nav>
   <h1>Sales Data - Initial</h1>
+
+
+  <table id="sales-data"></table>
   <div id="root" class="content"></div>
   <script src="./app.js"></script>
+
+  <footer>
+
+  </footer>
+  
 </body>
 </html>
