working on finishin up code201 lab-08b.

--- a/sale.html
+++ b/sale.html
@@ -20,7 +20,12 @@
   <h1>Sales Data - Initial</h1>
 
 
-  <table id="sales-data"></table>
+  <table id="sales-data">
+    <thead id="salesTableHeader"></thead>
+    <tbody id="salesTableBody"></tbody>
+    <tfoot id="salesTableFooter"></tfoot>
+  </table>
+  
   <div id="root" class="content"></div>
   <script src="./app.js"></script>
 
