the code that I had, the one that Demarquies and I worked on to get the stores and locations printed to the main page - my code was flipping around the location information and contact information. The phone number was trying to display in the location field and the location information was populating in the contact field. I asked for some help, had another set of eyes looking at it but nothing we tried worked. Wajiha was able to get hers working and when I typed in the code syntax she used, my page rendered properly.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
   <img src="./assets/salmon.png">
   <div id="root" class="content"></div>
+  <div id="output"></div>
+  <script src="./location.js"></script>
 </body>
 
 
