got my code to finally print out the locations to the main page. Submitting so i can start working on lab09.

--- a/sale.html
+++ b/sale.html
@@ -25,6 +25,9 @@
     <tbody id="salesTableBody"></tbody>
     <tfoot id="salesTableFooter"></tfoot>
   </table>
+
+  <button id="clickToAdd">Click Here to Add</button>
+
   
   <div id="root" class="content"></div>
   <script src="./app.js"></script>
