making sure my main branch is up to date before branching for lab-09.

--- a/sale.html
+++ b/sale.html
@@ -27,9 +27,10 @@
   </table>
 
   <button id="clickToAdd">Click Here to Add</button>
+  
 
   
-  <div id="root" class="content"></div>
+  </div> id="root" class="content"> </div>
   <script src="./app.js"></script>
 
   <footer>
